@startuml
class model.MemoSelect {
+ Deque<Memento> mementoList
+ void push(Memento)
+ Memento poll()
}


class model.Hexagon {
+ void draw(GraphicsContext)
}

abstract class model.Shape {
# double x
# double y
# Color color
+ Color getColor()
+ void setColor(Color)
+ double getX()
+ double getY()
+ {abstract}void draw(GraphicsContext)
+ void setPosition(double,double)
}


class model.Line {
- double length
- double angle
+ void draw(GraphicsContext)
}


class model.Memento {
- Shape snape
- double x
- Color color
+ Shape getState()
}


class model.Rectangle {
- double width
- double height
+ void draw(GraphicsContext)
}


class model.ShapeFactory {
+ Shape createShape(int,double,double)
}



model.Shape <|-- model.Hexagon
model.Shape <|-- model.Line
model.Shape <|-- model.Rectangle
@enduml